# iabisa

./: .env.example  README.md  compose.yaml  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env  .env.example  Dockerfile  api.py  automl_service.py  main.py  pyproject.toml  sales_data.db  supabase_storage.py  ui.py
backend/data/: .gitignore
backend/data/chroma/: .gitkeep
backend/faskes/: predict.py
backend/penyakit/: predict.py
backend/peserta/: predict.py
backend/rag/: __init__.py  rag_engine.py
backend/routers/: prediction.py  rag.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: Area.jsx  Grid.jsx  SortableArea.jsx  layout.tsx  loading.tsx  page.jsx
frontend/src/components/: chatbot-panel.jsx  chatbot-panel.tsx  dashboard-content.jsx  dashboard-layout.jsx  dashboard-layout.tsx  dashboard-panel.tsx  dynamic-chart.jsx  map copy.jsx  map.jsx  navbar.tsx
frontend/src/context/: dashboard-context.tsx
frontend/src/server/db/: schema.ts
src/app/: Area.jsx  index.js  page.jsx  photos.json
src/components/: chatbot-panel.tsx  dashboard-content.jsx  dashboard-layout.tsx  map.jsx
src/styles/: globals.css
